Bug 412238 - css fix for alignment in columns

--- a/bundles/org.eclipse.orion.client.ui/web/css/ide.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/ide.css
@@ -572,11 +572,14 @@ textarea.parameterInput {
 .secondaryColumn {
 	color: #666666;	
 	padding-right: 8px;
+	padding-top: 8px;
+	vertical-align:top;
 }
 
 .primaryColumn {
 	color: #3087B3;
 	text-decoration: none;
+	vertical-align:top;
 }
 
 .checkColumn {
